<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.udpsender.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Info" />

    <EditText
        android:id="@+id/txtIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/hnt_Ip"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/txtDelay"
        android:ems="10"
        android:hint="@string/hnt_msg"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtIp"
        android:layout_below="@+id/txtIp"
        android:ems="10"
        android:hint="@string/hnt_port"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnBroadCast"
        android:layout_below="@+id/txtPort"
        android:ems="10"
        android:hint="@string/hnt_delay"
        android:inputType="number" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMessage"
        android:layout_centerHorizontal="true"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/btnBroadCast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSend"
        android:layout_alignBottom="@+id/btnSend"
        android:layout_alignLeft="@+id/txtMessage"
        android:text="@string/btn_add" />

</RelativeLayout>